--- a/app/views/auth/forgot.html
+++ b/app/views/auth/forgot.html
@@ -13,7 +13,7 @@
     </div>
     <input type="submit" value="recordar"/>
 </form>
-<script src="/js/lib/jquery.min.js"></script>
+<script src="/js/vendor/jquery.min.js"></script>
 <script>
     var resetForm = $("#reset");
 
