--- a/public/stylus/elements/buttons.styl
+++ b/public/stylus/elements/buttons.styl
@@ -269,3 +269,12 @@
 	&.admin
 		cursor pointer
 		
+
+/*------------------------------------*
+	$ AVATAR
+*------------------------------------*/
+.button-avatar
+	max-width 2.5rem
+	img
+		border-radius 50%
+	
