--- a/public/stylus/objects/login.styl
+++ b/public/stylus/objects/login.styl
@@ -15,7 +15,17 @@
 	padding 3rem 1.5rem
 	overflow auto
 	display none
-		
+	
+
+/*------------------------------------*
+	$ LOGIN COVER
+*------------------------------------*/
+.login-cover
+	padding 2rem 1rem
+	min-height 500px
+	display flex
+	.login-box
+		flex 1
 		
 /*------------------------------------*
 	$ LOGIN BOX
@@ -26,6 +36,8 @@
 	margin auto
 	padding 1rem 1.5rem
 	position relative
+	// border solid 1px #ccc
+	box-shadow rgba(0,0,0,0.35) 0 0 10px
 	&__header
 		display flex
 		justify-content center
@@ -39,8 +51,6 @@
 			margin .5rem 0
 		.question
 			margin 1rem 0
-			// input
-			// 	padding-top .5rem
 		.note
 			margin 1rem 0
 			font-style italic
