--- a/public/css/discover-works.css
+++ b/public/css/discover-works.css
@@ -59,6 +59,12 @@ html {
   display: -ms-flexbox;
   display: box;
   display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
   font-size: 0.8rem;
   letter-spacing: 2px;
   font-family: 'Raleway';
@@ -74,6 +80,10 @@ html {
 }
 .skinny-menu__item.active {
   border-bottom: 0.25em solid #000;
+}
+.skinny-menu__avatar {
+  padding: 0 1rem;
+  cursor: pointer;
 }
 .skinny-menu[data-icon='true'] .skinny-menu__item__text {
   display: none;
@@ -265,6 +275,13 @@ html {
 }
 .button-featured.admin {
   cursor: pointer;
+}
+.button-avatar {
+  max-width: 2.5rem;
+}
+.button-avatar img {
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
 }
 .logo {
   padding: 0.5rem 1rem;
@@ -473,12 +490,33 @@ html {
   overflow: auto;
   display: none;
 }
+.login-cover {
+  padding: 2rem 1rem;
+  min-height: 500px;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+}
+.login-cover .login-box {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
 .login-box {
   background: #fff;
   max-width: 400px;
   margin: auto;
   padding: 1rem 1.5rem;
   position: relative;
+  -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
+  box-shadow: rgba(0,0,0,0.35) 0 0 10px;
 }
 .login-box__header {
   display: -webkit-box;
