--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -14,7 +14,7 @@
 			</a>
 			<a class="skinny-menu__item {% if path == 'users' %} active {% endif %}" href="/users/specialty/all/page-1">
 				<i class="skinny-menu__item__icon fa fa-paint-brush"></i>
-				<span class="skinny-menu__item__text">Artistas</span>
+				<span class="skinny-menu__item__text">Artístas</span>
 			</a>
 			<a class="skinny-menu__item {% if path == 'products' %} active {% endif %}" href="/products/type/all/page-1/">
 				<i class="skinny-menu__item__icon fa fa-diamond"></i>
