--- a/app/views/pages/users.html
+++ b/app/views/pages/users.html
@@ -75,7 +75,7 @@
 			********************************************************************* -->
 			<!-- <section class="artists" data-columns> -->
 			<section class="artists">
-				{% for user in users %}
+				{% for artist in users %}
 				<div class="artist-wrapper">				
 					<article class="artist">
 						<a class="artist-header" href="#"> 
@@ -83,7 +83,7 @@
 								<img src="/img/artists/artist1.jpg">
 							</div>
 							<div class="info">
-								<p class="high-text" data-size='small'>{{ user.firstname }}</p>
+								<p class="high-text" data-size='small'>{{ artist.firstname }}</p>
 								<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
 							</div>
 						</a>
@@ -96,10 +96,10 @@
 							<div class="work work6"></div>                  
 						</div>
 						<div class="artist-follow">
-							{% if user.following %}
-								<button class="button-liner disabled js-followButton" data-following="true" data-userId="{{ user.id }}" data-size='small'>
+							{% if artist.following %}
+								<button class="button-liner disabled js-followButton" data-following="true" data-userId="{{ artist.id }}" data-size='small'>
 							{% else %}
-								<button class="button-liner js-followButton" data-following="false" data-userId="{{ user.id }}" data-size='small'>
+								<button class="button-liner js-followButton" data-following="false" data-userId="{{ artist.id }}" data-size='small'>
 							{% endif %}
 								<span class="button-liner__action folllow">Seguir</span>
 								<span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
@@ -110,12 +110,23 @@
 
 						<!-- if isAdmin -->
 						<div class="artist__featured">
-							{% if user.featured %}
-								<span id="{{ user.id }}" class="button-featured admin unfeatured" data-size='small'> <i class="fa fa-star"></i>&nbsp;Recomendado </span>
-								<!-- <button id="{{ user.id }}" class="unfeatured">Unfeatured</button> -->
+							{% if user %}
+								
+								<!-- is Admin -->
+								{% if artist.featured %}
+									<span id="{{ artist.id }}" class="button-featured admin unfeatured" data-size='small'> <i class="fa fa-star"></i>&nbsp;Recomendado </span>
+								{% else %}
+									<span id="{{ artist.id }}" class="button-featured admin disabled featured" data-size='small'> <i class="fa fa-star"></i>&nbsp;Recomendar </span>
+								{% endif %}
+
+								<!-- else is User -->
+
 							{% else %}
-								<span id="{{ user.id }}" class="button-featured admin disabled featured" data-size='small'> <i class="fa fa-star"></i>&nbsp;Recomendar </span>
-								<!-- <button id="{{ user.id }}" class="featured">Featured</button> -->
+
+								{% if artist.featured %}
+									<span id="{{ artist.id }}" class="button-featured" data-size='small'> <i class="fa fa-star"></i>&nbsp;Recomendado </span>
+								{% endif %}
+
 							{% endif %}
 						</div>
 
@@ -262,8 +273,8 @@
 
 	<script>
 
-		var users = {{ users|json|safe }}
-		console.log('users: ', users)
+		var artists = {{ users|json|safe }}
+		console.log('artists: ', artists)
 
 		var pagination = {{ pagination|json|safe }};
 		console.log('pagination: ', pagination)
@@ -300,13 +311,10 @@
 			var scope = $(this);
 			$.ajax({
 				type: "POST",
-				url: "/user/featured/",
+				url: "/juliocanares/featured/",
 				data: {idUser: scope.attr('id')},
 				success: function (data) {
 					if (data.code == 202) {
-						// scope.parent().find('.featuredlogo').show();
-						// scope.text('Unfeatured');
-						// scope.removeClass('featured').addClass('unfeatured');
 						scope.html('<i class="fa fa-star"></i>&nbsp;Recomendado');
 						scope.removeClass('featured').addClass('unfeatured').removeClass('disabled');
 					}
@@ -337,330 +345,3 @@
 	</script>
 
 {% endblock %}
-
-	<!-- <section class="artists">
-		<div class="artist-wrapper">					
-			<article class="artist">
-			<a class="artist-header" href="#">
-				<div class="avatar">
-					<img src="/img/artists/artist1.jpg">
-				</div>
-				<div class="info">
-					<p class="high-text" data-size='small'>keri Russell</p>
-					<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-				</div>
-			</a>
-			<div class="artist-works">
-					<div class="work work1"></div>
-					<div class="work work2"></div>
-					<div class="work work3"></div>
-					<div class="work work4"></div>
-					<div class="work work5"></div>
-					<div class="work work6"></div>					
-			</div>
-			<div class="artist-follow">
-				<button class="button-liner" data-size='small'>
-					<span class="button-liner__action">Seguir</span>
-					<span class="button-liner__number">13,2k</span>
-				</button>
-			</div>
-			</article>
-		</div>
-		<div class="artist-wrapper">					
-			<article class="artist">
-			<a class="artist-header" href="#">
-				<div class="avatar">
-					<img src="/img/artists/artist2.jpg">
-				</div>
-				<div class="info">
-					<p class="high-text" data-size='small'>keri Russell</p>
-					<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-				</div>
-			</a>
-			<div class="artist-works">
-					<div class="work work7"></div>
-					<div class="work work8"></div>
-					<div class="work work9"></div>
-					<div class="work work10"></div>
-					<div class="work work11"></div>
-					<div class="work work12"></div>					
-			</div>
-			<div class="artist-follow">
-				<a class="button-liner disabled" data-size='small' href="#">
-					<span class="button-liner__action"><i class="fa fa-check"></i> Siguiendo</span>
-					<span class="button-liner__number">13,2k</span>
-				</a>
-			</div>
-			</article>
-		</div>
-		<div class="artist-wrapper">					
-			<article class="artist">
-			<a class="artist-header" href="#">
-				<div class="avatar">
-					<img src="/img/artists/artist3.jpg">
-				</div>
-				<div class="info">
-					<p class="high-text" data-size='small'>keri Russell</p>
-					<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-				</div>
-			</a>
-			<div class="artist-works">
-					<div class="work work1"></div>
-					<div class="work work2"></div>
-					<div class="work work3"></div>
-					<div class="work work4"></div>
-					<div class="work work5"></div>
-					<div class="work work6"></div>					
-			</div>
-			<div class="artist-follow">
-				<div class="button-liner disabled" data-size='small'>
-					<span class="button-liner__action"><i class="fa fa-times-circle"></i> Cancelar</span>
-					<span class="button-liner__number">13,2k</span>
-				</div>
-			</div>
-			</article>
-		</div>
-		<div class="artist-wrapper">					
-			<article class="artist">
-			<a class="artist-header" href="#">
-				<div class="avatar">
-					<img src="/img/artists/artist4.jpg">
-				</div>
-				<div class="info">
-					<p class="high-text" data-size='small'>keri Russell</p>
-					<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-				</div>
-			</a>
-			<div class="artist-works">
-					<div class="work work7"></div>
-					<div class="work work8"></div>
-					<div class="work work9"></div>
-					<div class="work work10"></div>
-					<div class="work work11"></div>
-					<div class="work work12"></div>					
-			</div>
-			<div class="artist-follow">
-				<button class="button-liner" data-size='small'>
-					<span class="button-liner__action">Seguir</span>
-					<span class="button-liner__number">13,2k</span>
-				</button>
-			</div>
-			</article>
-		</div>
-		<div class="artist-wrapper">					
-			<article class="artist">
-			<a class="artist-header" href="#">
-				<div class="avatar">
-					<img src="/img/artists/artist1.jpg">
-				</div>
-				<div class="info">
-					<p class="high-text" data-size='small'>keri Russell</p>
-					<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-				</div>
-			</a>
-			<div class="artist-works">
-					<div class="work work1"></div>
-					<div class="work work2"></div>
-					<div class="work work3"></div>
-					<div class="work work4"></div>
-					<div class="work work5"></div>
-					<div class="work work6"></div>					
-			</div>
-			<div class="artist-follow">
-				<button class="button-liner" data-size='small'>
-					<span class="button-liner__action">Seguir</span>
-					<span class="button-liner__number">13,2k</span>
-				</button>
-			</div>
-			</article>
-		</div>
-		<div class="artist-wrapper">					
-			<article class="artist">
-			<a class="artist-header" href="#">
-				<div class="avatar">
-					<img src="/img/artists/artist2.jpg">
-				</div>
-				<div class="info">
-					<p class="high-text" data-size='small'>keri Russell</p>
-					<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-				</div>
-			</a>
-			<div class="artist-works">
-					<div class="work work7"></div>
-					<div class="work work8"></div>
-					<div class="work work9"></div>
-					<div class="work work10"></div>
-					<div class="work work11"></div>
-					<div class="work work12"></div>					
-			</div>
-			<div class="artist-follow">
-				<a class="button-liner disabled" data-size='small' href="#">
-					<span class="button-liner__action"><i class="fa fa-check"></i> Siguiendo</span>
-					<span class="button-liner__number">13,2k</span>
-				</a>
-			</div>
-			</article>
-		</div>
-		<div class="artist-wrapper">					
-			<article class="artist">
-			<a class="artist-header" href="#">
-				<div class="avatar">
-					<img src="/img/artists/artist3.jpg">
-				</div>
-				<div class="info">
-					<p class="high-text" data-size='small'>keri Russell</p>
-					<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-				</div>
-			</a>
-			<div class="artist-works">
-					<div class="work work1"></div>
-					<div class="work work2"></div>
-					<div class="work work3"></div>
-					<div class="work work4"></div>
-					<div class="work work5"></div>
-					<div class="work work6"></div>					
-			</div>
-			<div class="artist-follow">
-				<div class="button-liner disabled" data-size='small'>
-					<span class="button-liner__action"><i class="fa fa-times-circle"></i> Cancelar</span>
-					<span class="button-liner__number">13,2k</span>
-				</div>
-			</div>
-			</article>
-		</div>
-		<div class="artist-wrapper">					
-			<article class="artist">
-			<a class="artist-header" href="#">
-				<div class="avatar">
-					<img src="/img/artists/artist4.jpg">
-				</div>
-				<div class="info">
-					<p class="high-text" data-size='small'>keri Russell</p>
-					<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-				</div>
-			</a>
-			<div class="artist-works">
-					<div class="work work7"></div>
-					<div class="work work8"></div>
-					<div class="work work9"></div>
-					<div class="work work10"></div>
-					<div class="work work11"></div>
-					<div class="work work12"></div>					
-			</div>
-			<div class="artist-follow">
-				<button class="button-liner" data-size='small'>
-					<span class="button-liner__action">Seguir</span>
-					<span class="button-liner__number">13,2k</span>
-				</button>
-			</div>
-			</article>
-		</div>
-		<div class="artist-wrapper">					
-			<article class="artist">
-			<a class="artist-header" href="#">
-				<div class="avatar">
-					<img src="/img/artists/artist1.jpg">
-				</div>
-				<div class="info">
-					<p class="high-text" data-size='small'>keri Russell</p>
-					<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-				</div>
-			</a>
-			<div class="artist-works">
-					<div class="work work1"></div>
-					<div class="work work2"></div>
-					<div class="work work3"></div>
-					<div class="work work4"></div>
-					<div class="work work5"></div>
-					<div class="work work6"></div>					
-			</div>
-			<div class="artist-follow">
-				<button class="button-liner" data-size='small'>
-					<span class="button-liner__action">Seguir</span>
-					<span class="button-liner__number">13,2k</span>
-				</button>
-			</div>
-			</article>
-		</div>
-		<div class="artist-wrapper">					
-			<article class="artist">
-			<a class="artist-header" href="#">
-				<div class="avatar">
-					<img src="/img/artists/artist2.jpg">
-				</div>
-				<div class="info">
-					<p class="high-text" data-size='small'>keri Russell</p>
-					<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-				</div>
-			</a>
-			<div class="artist-works">
-					<div class="work work7"></div>
-					<div class="work work8"></div>
-					<div class="work work9"></div>
-					<div class="work work10"></div>
-					<div class="work work11"></div>
-					<div class="work work12"></div>					
-			</div>
-			<div class="artist-follow">
-				<a class="button-liner disabled" data-size='small' href="#">
-					<span class="button-liner__action"><i class="fa fa-check"></i> Siguiendo</span>
-					<span class="button-liner__number">13,2k</span>
-				</a>
-			</div>
-			</article>
-		</div>
-		<div class="artist-wrapper">					
-			<article class="artist">
-			<a class="artist-header" href="#">
-				<div class="avatar">
-					<img src="/img/artists/artist3.jpg">
-				</div>
-				<div class="info">
-					<p class="high-text" data-size='small'>keri Russell</p>
-					<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-				</div>
-			</a>
-			<div class="artist-works">
-					<div class="work work1"></div>
-					<div class="work work2"></div>
-					<div class="work work3"></div>
-					<div class="work work4"></div>
-					<div class="work work5"></div>
-					<div class="work work6"></div>					
-			</div>
-			<div class="artist-follow">
-				<div class="button-liner disabled" data-size='small'>
-					<span class="button-liner__action"><i class="fa fa-times-circle"></i> Cancelar</span>
-					<span class="button-liner__number">13,2k</span>
-				</div>
-			</div>
-			</article>
-		</div>
-		<div class="artist-wrapper">					
-			<article class="artist">
-			<a class="artist-header" href="#">
-				<div class="avatar">
-					<img src="/img/artists/artist4.jpg">
-				</div>
-				<div class="info">
-					<p class="high-text" data-size='small'>keri Russell</p>
-					<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-				</div>
-			</a>
-			<div class="artist-works">
-					<div class="work work7"></div>
-					<div class="work work8"></div>
-					<div class="work work9"></div>
-					<div class="work work10"></div>
-					<div class="work work11"></div>
-					<div class="work work12"></div>					
-			</div>
-			<div class="artist-follow">
-				<button class="button-liner" data-size='small'>
-					<span class="button-liner__action">Seguir</span>
-					<span class="button-liner__number">13,2k</span>
-				</button>
-			</div>
-			</article>
-		</div>
-	</section> -->
