antes de pulear

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -200,6 +200,9 @@
 		var workFeatureds = {{ workFeatureds|json|safe }}
 		console.log('workFeatureds: ', workFeatureds)
 
+		// var works = {{ works|json|safe }}
+		// console.log('works: ', works)
+
 		var user = {{ user|json|safe }}
 		console.log('user: ', user)
 	</script>
