--- a/public/stylus/elements/buttons.styl
+++ b/public/stylus/elements/buttons.styl
@@ -253,22 +253,14 @@
 *------------------------------------*/
 .button-featured
 	color white
-	font-family 'Raleway'
-	letter-spacing 1px
-	padding .25rem .5rem
-	font-weight 600
-	font-size .75rem
-	border-radius 4px
-	// background #3000ff
 	background #FF6E40
+	border solid 1px #FF6E40
+	font-size .6rem
+	padding .75em .25em .5em .25em
+	border-radius 0 0 5px 5px
 	display flex
-	align-items center
-	&.disabled
-		background #ddd
-		color #333
-	&.admin
-		cursor pointer
-		
+	justify-content center
+
 
 /*------------------------------------*
 	$ AVATAR
