--- a/public/css/discover-works.css
+++ b/public/css/discover-works.css
@@ -248,33 +248,24 @@ html {
 }
 .button-featured {
   color: #fff;
-  font-family: 'Raleway';
-  letter-spacing: 1px;
-  padding: 0.25rem 0.5rem;
-  font-weight: 600;
-  font-size: 0.75rem;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
   background: #ff6e40;
+  border: solid 1px #ff6e40;
+  font-size: 0.6rem;
+  padding: 0.75em 0.25em 0.5em 0.25em;
+  -webkit-border-radius: 0 0 5px 5px;
+  border-radius: 0 0 5px 5px;
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: box;
   display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -o-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
-.button-featured.disabled {
-  background: #ddd;
-  color: #333;
-}
-.button-featured.admin {
-  cursor: pointer;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
 }
 .button-avatar {
   max-width: 2.5rem;
